# argon2_cracker2

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  benchmark.cpp  benchmark.h  cmake_install.cmake  crack.cpp  crack.h  main.cpp  utils.cpp  utils.h
test/: CMakeLists.txt  argon2hashes.txt  crack_ctest.cpp  hashfile.txt
